<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.apareciumlabs.brionsilva.braintrainer.GameScreen">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/lblHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblHint"
            android:textColor="@color/Black"
            android:layout_marginRight="5dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Switch
            android:id="@+id/hintSwitch"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:text="Switch" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/lblTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTime"
                android:textColor="@color/Black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerTextView"
                android:textColor="@color/Black"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="101dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblGuess"
            android:textColor="@color/Black"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblQuestion"
            android:textColor="@color/Black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/lblEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEqual"
            android:textColor="@color/Black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAnswer"
            android:textColor="@color/Black"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="RESULT"
        android:textColor="@color/Black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.061" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintVertical_bias="0.769">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp">

            <!--First Row-->
            <Button
                android:id="@+id/oneBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="1"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="2"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="3"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp">

            <!--Second Row-->
            <Button
                android:id="@+id/fourBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="4"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="5"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="6"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp">

            <!--Third Row-->
            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="7"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="8"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="9"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp">

            <!--Fourth Row-->
            <Button
                android:id="@+id/delBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="DEL"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button

                android:id="@+id/zeroBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="0"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/hashBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="#"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/darkGrey"
                android:text="-"
                android:textSize="60px"
                android:layout_marginRight="1dp"/>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
